CSS/main.css
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500&family=Quicksand:wght@300;400;500;600;700&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Quicksand", sans-serif;
}

:root {
    --sec-color: hsl(155, 60%, 96%);
    --contrast-color: hsl(150, 19%, 27%);
    --link: hsl(0, 0%, 0%);
    --background-color-header: hsl(150, 16%, 32%);
    --backound-two: hsl(0, 18%, 97%);
    --project-header-color: hsl(150, 16%, 32%);
}

p {
    font-size: 1em;
    margin: 1em 0;
}


li {
    list-style: none;
}

h1,
h2,
h3,
h4 {
    font-family: 'Inter', sans-serif;
    margin: 1em 0;
    font-weight: 700;
    color: var(--project-header-color);
}
.project-container h1{
    font-size: 4em;
    @media only screen and (min-width: 600px) {


}
}
a,
a:focus,
a:active,
a:visited {
    color: var(--link);
    font-size: 1.1em;
}


.large-text{
    font-size: 2em;
    @media only screen and (min-width: 600px) {
    font-size: 3em;
}
}

a:hover {
    transition: .3s ease-out;
    transform: scale(1);
    color: var(--contrast-color);
    animation: alternate 3ms;
}

.top{ 
    margin-top: 1em;
}
bottom {
    margin-bottom: 1em;
}
.wrap{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.wrap-2{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.space-between{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.container {
    margin: 0 auto;
    background: #EFFBF6;

    @media only screen and (min-width: 600px) {
        width: 100%;
        display: grid;
        grid-template-columns: 30% 1fr;
        gap: 1em;
    }
}

.content-wrapper h2 {
    font-size: 1.6em;
    font-weight: 500;
}
.content-wrapper h3 {
    font-weight: 100;
}

/*background images for grid*/
.context-background-img {
    border-radius: 1em;
    width: 320px;
    height: 300px;
    border: 1px solid #eee;
    background-size: cover;
    background-position:50% 50%;
    image-rendering: -webkit-optimize-contrast;
    @media only screen and (min-width: 1400px) {
        width: 600px;
        height: 450px;
}
}
context-container-1{
    @media only screen and (min-width: 600px) {
    display: flex;
    justify-content: space-between;
}
}
.back-one {
    background-image: url(https://i.ibb.co/ThqqjZk/1-1a-D-CPD-New-CP-member-Default.png);
}

.back-two {
    background-image: url(https://i.ibb.co/Cw5TdgL/i-Pad-Pro-2017-1.png);
}

.back-three {
    background-image: url(https://i.ibb.co/YLpj3jc/Ink-Tank-into.png);
}

.back-four {
    background-image: url(https://i.ibb.co/DRPVXx1/Portfolio4chowdown.jpg);
}

.back-five {
    background-image: url(https://i.ibb.co/x2CpNqm/Frame-1.png);
}

.back-seven {
    background-image: url(https://i.ibb.co/zh5VLdk/other-methods-to-filter-and-sort.png);
}

.back-six {
    background:#395346;
}
.content-wrapper ul {
    display: flex;
    flex-wrap: wrap;
}


.content-container {
    margin: 2em 1em;
}

.content-container-hero {
    display: grid;
    margin: 1em;
}

.content-container-hero p {
    color: #395346;
}


.container ul {
    display: flex;

}

.container li {
    list-style: none;
    margin-top: 2em;
    padding: 2em 3em 0 0;
}

.project-grid {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    
}
.content-grid{
    display: grid;
    justify-content: center;
    margin: 45vh 1em 0 1em;
}


.about-container{
    margin: 10em 6em;
}
.about-container h1{
    font-size: 4em;
    margin: 0 0 .5em 0 ;
}

.about-container-text {
    line-break: auto;
    line-height: 2em;
}

.tabs {
    background-color: #D9D9D9;
    border-radius: 12px;
    width: auto;
    padding: .5em;
    max-width: 100%;
    text-align: center;
    font-weight: 500;
    margin: .2em .2em 0 0;
    @media only screen and (min-width: 600px) {
        margin: .5em .5em 0 0;
    }
}


.flex {
    @media only screen and (min-width: 1000px) {
    display: flex;
    justify-content: space-between;
}
}
 .bold{
    font-weight: bold;
 }

.content-wrapper {
    display: grid;
    gap: 1em;
    margin: 1em;
    width: 300px;
    max-height: 600px;
    justify-content: center;
    align-content: space-around;

    @media only screen and (min-width: 1400px) {
        width: 600px;
        max-height: 800px;
        grid-template-columns: 4fr;
        grid-template-rows: 3fr;
        grid-template-columns: 2fr;
        justify-content: space-between;
    }
}



.fa {
    color: #000;
    font-size: 1.1em;
    transition: .3s ease-in;
    transform: scale(1.1);
    z-index: 1;

}

.social-links li {
    color: #000;
    display: inline-block;
    margin: 1em 0;
    padding: 0 3em 0 0;
}


/*grid*/



.content-grid-text {
    display: grid;
    justify-content: space-between;

}

.about-container img {
    border-radius: 10%;
}

.about{
    margin: 6em 0 0 0;
}
.about-btn {
    padding: 15px;
    overflow-x: hidden;
    background-color: #8dc7ab;
    transition: .3s ease-in;
    transform: scale(1.1);
    z-index: 1;
    border-radius: 40px;
    border: 2px solid #000;
    margin: 1% auto;
    font-weight: 500;

}


.overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    z-index: -10;
    background-color: var(--contrast-color);
}

.container {
    display: flex;
    height: 100vh;
    justify-content: space-around;
    align-items: center;
    color: #fff;
    animation: expand .8s ease forwards;
    background-color: var(--sec-color);
    position: relative;
    transition: all .8s ease;
}

.container_content {
    width: 100%;
    @media only screen and (min-width: 600px) {
    width: 80%;
}
}

.container_content_inner {
    width: 100%;
    padding: 10%;

    @media only screen and (min-width: 1000px) {
        width: 70%;
        padding: 4em;
    }
}

.container_outer_img {
    margin: 50px;
    width: 50%;
    overflow: hidden;
}

.container_img {
    width: 100%;
    animation: slideIn 1.5s ease-in-out forwards;
}

.project-container {
    margin: 16em auto 0em 2em;
    @media only screen and (min-width: 600px) {
    margin: 22em 6em 0 6em;
}
}

.one-margin{
    margin-left: 1.2em;
}

.par {
    height: auto;
    overflow: hidden;
}

.par p {
    color: var(--contrast-color);
    line-height: 28px;
    font-size: 1.5em;
    transform: translateY(300px);
    animation: slideUp .8s ease-in-out forwards .8s;
}

.btns {
    height: 100%;
    position: relative;
    width: 150px;
    overflow: hidden;
}

.links {
    background: transparent;
    border: 1px solid var(--contrast-color);
    border-radius: 50px;
    padding: 8px 12px;
    color: #BF307F;
    font-size: 16px;
    text-transform: uppercase;
    position: relative;
    margin-top: 15px;
    outline: none;
    transform: translateY(50px);
    animation: slideUp .8s ease-in-out forwards 1s;
}

.title {
    overflow: hidden;
    height: auto;
}
.container_content_inner p{
    color: #395346;
    transform: translateY(200px);
    animation: slideUp .8s ease forwards .5s;
}

.container_content_inner h1 {
    margin: 0;
    font-size: 3em;
    color: var(--contrast-color);
    margin-bottom: 20px;
    transform: translateY(200px);
    animation: slideUp .8s ease forwards .6s;
    @media only screen and (min-width: 1000px) {
        font-size: 6em;
    }

}

nav {
    line-height: 28px;
    transform: translateY(300px);
    animation: slideUp .8s ease-in-out forwards .8s;
}

@keyframes slideIn {
    0% {
        transform: translateX(500px) scale(.2);
    }

    100% {
        transform: translateX(0px) scale(1);
    }
}

@keyframes slideUp {
    0% {
        transform: translateY(300px);
    }

    100% {
        transform: translateY(0px);
    }
}

@keyframes expand {
    0% {
        transform: translateX(1400px);
    }

    100% {
        transform: translateX(0px);
    }
}

.nav-link {
    overflow: hidden;
    line-height: 28px;
    transform: translateY(1000px);
    animation: slideUp .8s ease-in-out forwards .8s;

}
.nav-link h1{
    margin-left: 1em;
}



 .nav-link ul li {
    padding-right: .5em;
    @media only screen and (min-width: 1000px) {
    padding-right: 1em;
 }
}

.fixed-nav {
    background: var(--sec-color);
}


.fixed-nav ul {
    display: flex;
    margin-left: 1em;
    @media only screen and (min-width: 1000px) {

justify-content: space-between;
align-items: center;
}
}

footer {
    margin-top: 3em;
    background-color: var(--sec-color);
}

footer .socials {
    display: flex;
    justify-content: space-between;
}

.footer-content{
    padding: 1em .5em;
    @media only screen and (min-width: 600px) {
    padding: 2em 6em;
    }
}


/* Project css */
.header-project {
    background-color: var(--background-color-header);
    padding: 2%;
    width: 100%;
    height: auto;
}

.header-project h1 {
    color: var(--sec-color);
}
.header,
.project-nav {
  
    position: sticky;
    top: 0;
}

.project-nav {
    padding: 1em;
    display: flex;
    justify-content: space-between;
    background-color: var(--sec-color);
    @media only screen and (min-width: 600px) {
    }
}

.project-information-container {
    background-color: var(--backound-two);
    padding: 1em;

    @media only screen and (min-width: 600px) {
        display: flex;
        align-items: baseline;
        justify-content: space-between;

    }
}

.project-tabs {
    background-color: var(--project-header-color);
    color: var(--sec-color);
    border-radius: 12px;
    width: fit-content;
    padding: .5em;
    text-align: center;
    font-size: 1em;
    font-weight: 500;
    margin: .5em;
}

.list-tab{
    display: flex;
}
.list-tab ul {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    @media only screen and (min-width: 600px) {

    }
}
.background-color{
    padding: 2em;
    background-color: var(--sec-color);
    @media only screen and (min-width: 600px) {
    padding: 6em;
    
}
}

.dp-containter {
    margin: 0 2em;
    @media only screen and (min-width: 600px) {
    margin: 0 6em;
}
}
.dp-box{
    width: 200px;
    max-height: 350[x];
}

.project-conext-container {
    margin: 0 1em;
    @media only screen and (min-width: 600px) {
        margin: 0 6em;
    }
}

.project-conext-container p {
    margin: 1em 0;
    line-height: 1.5em;
}

.project-conext-container h2 {
    font-size: 3em;
    color: var(--project-header-color);
}

.content-container-project img {
    max-width: 100%;
    @media only screen and (min-width: 600px) {
    max-width: 80%;
    height: auto;
}
}
.content-container-project-1 img {
    width: 100%;
    height: auto;
    margin: 1em 0;
}

.youtube {
    max-width: 95%;
    display: block;
    margin: 1.5em 0;
}

.fimga {
    width: 100%;
    height: 100%;
    max-width: 1000px;
    max-height:600px;
}
.cute-bullets{
    margin-left: 1em;
}
.cute-bullets li{
    list-style: circle;
    margin-right: 1em;
}

